<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Niezapominajka</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="task_name">Task name</string>
    <string name="task_desc">Task description</string>
    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="task_name_error">Task name cannot be empty</string>
    <string name="task_desc_error">Task description cannot be empty</string>

</resources>
