<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >



    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTaskName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:text="@string/task_name"
        android:editable="true"
        android:clickable="false"
        android:autoText="false"
        android:layout_weight="0.12" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTaskDescription"
        android:layout_below="@+id/etTaskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/task_desc"
        android:layout_weight="0.46"
        android:layout_above="@+id/taskDatePicker" />

    <DatePicker
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskDatePicker"
        android:calendarViewShown="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/btSaveTask"
        android:layout_weight="0.50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>