<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >



    <EditText
        android:id="@+id/etTaskName_update"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:text="@string/task_name"
        android:editable="true"
        android:clickable="false"
        android:autoText="false"
        android:layout_weight="0.12" />

    <EditText
        android:id="@+id/etTaskDescription_update"
        android:layout_below="@+id/etTaskName_update"

        android:text="@string/task_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_weight="0.46"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/taskDatePicker_update" />

    <DatePicker
        android:id="@+id/taskDatePicker_update"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:calendarViewShown="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btDeleteTask"

            android:text="@string/button_delete"
            android:textColor="#EDEDED"
            android:textSize="25sp"

            android:background="@drawable/negative_button_shape"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.50"
            />

        <Button
            android:id="@+id/btUpdateTask"

            android:text="@string/button_update"
            android:textColor="#EDEDED"
            android:textSize="25sp"

            android:background="@drawable/positive_button_shape"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.50"
            />
    </LinearLayout>
</RelativeLayout>